# StreamPay-Contracts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.build
docs/: RELEASE.md  collateral.md  factory-pattern.md
docs/superpowers/plans/: 2026-03-24-contract-version-getter.md  2026-03-24-release-process.md
docs/superpowers/specs/: 2026-03-24-release-process-design.md  contract-version-getter-design.md
src/: lib.rs
test_snapshots/test/: test_archive_active_stream_panics.1.json  test_archive_inactive_stream.1.json  test_archive_settled_stream.1.json  test_archive_unsettled_stream_panics.1.json  test_archived_stream_not_found.1.json  test_create_stream_extends_ttl.1.json  test_create_stream_valid.1.json  test_settle_returns_amount.1.json  test_start_and_stop_stream.1.json
