[package]
name = "streampay-contracts"
version = "0.1.0"
edition = "2021"
description = "StreamPay Soroban smart contracts for payment streaming"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "22.0"

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
